--- a/NEWS
+++ b/NEWS
@@ -1,12 +1,87 @@
 -*- text -*-
 
+Version 2.0 (2021-02-22)
+--------------------
+
+* A new class of multi-state models based on mixtures (Larson and
+  Dinse 1985).  A new vignette on multi-state modelling describes this
+  model class and contrasts it with standard (cause-specific hazards)
+  multi-state models.
+
+* Different parametric families are now supported for different
+  transitions in multi-state models.
+
+* New function "fmsm" allows a list of flexsurvreg objects to be
+  associated with a particular transition structure matrix, to create
+  a multi-state model. 
+
+* New functions simfinal_fmsm to summarise times and probabilities of
+  final absorbing events in multi-state models, using simulation.
+
+* More features for right-truncated data.  Individual-level
+  right-truncation times supported with new "rtrunc" argument to
+  flexsurvreg and flexsurvspline.  A comparable non-parametric
+  estimator for right-truncated data is provided in a new function,
+  "survrtrunc".  Alternative parametric estimators, which make use
+  of the time of an initiating event, are provided in a new function,
+  "flexsurvrtrunc".
+
+* A new vignette describes properties of the different built-in
+   parametric distributions in more detail. 
+
+* qgeneric is now vectorised, thanks to the vuniroot function imported
+  from the rstpm2 package by Mark Clements.  This massively boosts the
+  speed of rsurvspline, hence speeding up simulations from
+  spline-based multi-state models.
+
+* pmatrix.fs can now calculate transition probabilities conditionally
+  on the the transition being to one of a subset of the states.
+
+* "tidy" argument to pmatrix.fs for tidy data frame output. 
+
+* "tidy" argument to sim.fmsm for returning simulations in tidy data
+  frame format with one row per transition, and associated function
+  simfs_bytrans.
+
+* Bootstrapping function bootci.fmsm made available for users to get
+  confidence intervals / distributions for their own flexsurv model
+  output functions.
+
+* Parallel processing capability for bootstrap confidence intervals.
+
+* Distribution and mean functions for the Royston-Parmar model named
+  like dsurvspline2, psurvspline4 and so on, with one argument per
+  parameter, rather than all parameters collected in a single
+  argument, going up to 7 knots / 9 parameters.
+
+* Return value from pars.fmsm is now a list rather than a matrix, even
+  if the model family is the same for each transition.
+
+* summary.flexsurvreg given a new argument "na.action" to control
+  whether missing values in "newdata" are dropped.  Defaults to
+  producing summaries of NA when there are missing values, while
+  previously missing values were dropped.
+
+* S3 methods have been added for the generics defined in the broom
+  package.  These functions create tidy data frames containing the
+  results of fitted models.  The new functions are tidy.flexsurvreg,
+  glance.flexsurvreg, and augment.flexsurvreg.
+
+* S3 methods have been added for the predict and residuals
+  generics. predict.flexsurvreg has full support for all model
+  outcomes supported by summary.flexsurvreg.  residuals.flexsurvreg
+  currently only supports a naive difference between observed survival and
+  predicted mean, neglecting censoring.
+
+* Case weights accounted for in nonparametric survival and cumulative
+   hazard estimates in plot.flexsurvreg.  Thanks to https://github.com/andbe. 
 
 
 Version 1.1.1 (2019-03-18)
 -------------
 
 * New type="quantiles" and type="link" for summary.flexsurvreg.
-  Thanks to Leonardo Marques for the contribution.  
+  Thanks to Leonardo Marques for the contribution.
 
 * Allow different covariates per transition in multi-state models
   supplied as a list of flexsurvreg objects.  Thanks to David
@@ -30,7 +105,7 @@ Version 1.1 (2017-03-27)
 * Substantial speed improvements in fitting most of the built-in
   models, from implementing their PDFs and CDFs in C++.  Thanks to
   Paul Metcalfe for contributing this.  Results may therefore differ
-  from previous versions in edge cases. 
+  from previous versions in edge cases.
 
 * As a result the package now depends on Rcpp.
 
@@ -112,7 +187,7 @@ Version 0.7 (2015-11-13)
   (github issue #7).  The behaviour here should now be like predict.lm,
   e.g. variables in newdata that were originally factors should be
   supplied as factor or character, not numeric.
-  
+
 * Fix of bug that prevented plots being drawn by categorical
   covariates by default.
 
@@ -122,10 +197,10 @@ Version 0.7 (2015-11-13)
 * Fix of bugs with subsetting in flexsurvspline (github issue #6).
 
 
-Version 0.6 (2015-04-13) 
+Version 0.6 (2015-04-13)
 -----------
 
-* CRAN release.  Also includes the changes from Version 0.5.1. 
+* CRAN release.  Also includes the changes from Version 0.5.1.
 
 * Full support for multi-state models fitted as a list of
   independent transition-specific models.
@@ -242,7 +317,7 @@ Output functions:
   intervals.
 
 * "start" argument defaults to 0 for all prediction times in
-  summary.flexsurvreg. 
+  summary.flexsurvreg.
 
 * Bug fix in summary.flexsurvreg for left-truncated models, which was
   returning probabilities > 1 before the truncation time.
@@ -253,10 +328,10 @@ Output functions:
 * Accept vector X in summary.flexsurvreg, and give informative error
   if X in wrong format.  Thanks to Mark Danese.
 
-* Extra arguments can be passed to both muhaz and plot.muhaz in 
+* Extra arguments can be passed to both muhaz and plot.muhaz in
   plot.flexsurvreg(...,type="hazard",...)
 
-Printed output: 
+Printed output:
 
 * Use format() not signif() for printing flexsurvreg objects, to avoid
   spurious zero significant figures. Thanks to Kenneth Chen.
@@ -265,7 +340,7 @@ Printed output:
   for parameters optimised on natural or log scales (which includes
   all built-in distributions).
 
-Distribution functions: 
+Distribution functions:
 
 * Bug fix in rgengamma for Q=0 (log-normal) and sigma not equal to 1.
 
