--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 -*- text -*-
 
+Version 2.2.2 (2023-01-31)
+-------------------------
+
+* Allow unicode characters in vignette, to satisfy R CMD check on
+  r-devel. 
+
+
 Version 2.2.1 (2022-12-22)
 -------------------------
 
