--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,17 @@
 -*- text -*-
 
+For changes in Version 2.3 and later, see
+
+https://chjackson.github.io/flexsurv/news
+
+which is built from NEWS.md in the source root directory.
+
+
 Version 2.2.2 (2023-01-31)
 -------------------------
 
 * Allow unicode characters in vignette, to satisfy R CMD check on
-  r-devel. 
+  r-devel.
 
 
 Version 2.2.1 (2022-12-22)
